"Updated CSS styles and HTML structure for various sections, including home, about, portfolio, and footer."

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
         <section class="porfolio">
             <h2 class="porfolio__title">porfolio</h2>
             <section class="flexrow porfolio__cards">
-                <a href="" class="flexcolum porfolio__cards--card pcccard">
-                    <div class="pcccard__img">
+                <section class="flexcolum porfolio__cards--card pcccard">
+                    <a href="" class="pcccard__img">
                         <img src="images/Captura2.PNG" alt="">
-                    </div>
+                    </a>
                     <div class="flexcolum pcccard__detail">
                         <h4>Lorem, ipsum dolor.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum veniam atque cumque ipsam at
@@ -264,17 +264,21 @@
                     <button class="pcccard__buttonLoad">
                         <span>ver más</span>
                     </button>
-                </a>
+                </section>
             </section>
         </section>
 
     </main>
 
     <footer class="footer">
-        <div class="footer__container container grid">
-            <div class="footer__content grid">
-                <a href="index.html" class="footer__logo">Javier Espindola</a>
-
+        <div class="flexcolum footer__container  ">
+            <div class="flexcolum footer__content ">
+                <a href="index.html" class="footer__logo">
+                    <h2>
+                        Javier Espindola
+                    </h2>
+                </a>
+                <!-- 
                 <ul class="footer__links">
                     <li>
                         <a href="about.html" class=" footer__link">Acerca de mí</a>
@@ -285,7 +289,7 @@
                     <li>
                         <a href="contact.html" class="footer__link">Contáctame</a>
                     </li>
-                </ul>
+                </ul> -->
 
                 <div class="footer__social">
                     <a href="https://www.linkedin.com/in/javier-espindola/" target="_blank"
