"Updated CSS styles, added scroll up button, and modified HTML structure and JavaScript code"

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a href="#">inicio</a>
                 </li>
                 <li>
-                    <a href="#">acerca de mi</a>
+                    <a href="#about">acerca de mi</a>
                 </li>
                 <li>
-                    <a href="#">porfolio</a>
+                    <a href="#porfolio">porfolio</a>
                 </li>
 
             </ul>
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
             <div>
 
                 <section class="about__profile">
@@ -109,7 +109,7 @@
 
         </section>
 
-        <section class="porfolio">
+        <section class="porfolio" id="porfolio">
             <div>
 
                 <h2 class="porfolio__title">porfolio</h2>
@@ -205,7 +205,7 @@
                 <!-- <h3 class="technology__h3">mis habilidades tecnológicas</h3> -->
                 <section>
 
-                    <section class="about__skills ">
+                    <section class="about__skills flexrow ">
 
                         <div class="about__skills-content flexrow">
                             <div>
@@ -234,8 +234,6 @@
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Kotlin-Dark.svg"
                                     alt="Kotlin" class="about__skills-img" title="Kotlin" />
                             </div>
-
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/HTML.svg"
                                     alt="HTML5" class="about__skills-img" title="HTML5" />
@@ -244,33 +242,26 @@
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/CSS.svg"
                                     alt="CSS3" class="about__skills-img" title="CSS3" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Bootstrap.svg"
                                     alt="Bootstrap" class="about__skills-img" title="Bootstrap" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Spring-Light.svg"
                                     alt="Spring" class="about__skills-img" title="Spring Framework" />
                             </div>
-
                             <div>
                                 <img src="https://user-images.githubusercontent.com/25181517/183891303-41f257f8-6b3d-487c-aa56-c497b880d0fb.png"
                                     alt="Sprintboot" class="about__skills-img" title="Sprintboot" />
                             </div>
-
                             <div>
-
                                 <img src="https://user-images.githubusercontent.com/25181517/117207493-49665200-adf4-11eb-808e-a9c0fcc2a0a0.png"
                                     alt="Hibernate" class="about__skills-img" title="Hibernate" />
                             </div>
                             <div>
-
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Maven-Light.svg"
                                     alt="Maven" class="about__skills-img" title="Maven" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/NodeJS-Light.svg"
                                     alt="NodeJS" class="about__skills-img" title="NodeJS" />
@@ -287,33 +278,26 @@
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/React-Light.svg"
                                     alt="React" class="about__skills-img" title="React" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/MySQL-Light.svg"
                                     alt="MySQL" class="about__skills-img" title="MySQL" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/MongoDB.svg"
                                     alt="MongoDB" class="about__skills-img" title="MongoDB" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/SQLite.svg"
                                     alt="SQLite" class="about__skills-img" title="SQLite" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Git.svg"
                                     alt="Git" class="about__skills-img" title="Git" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Postman.svg"
                                     alt="Postman" class="about__skills-img" title="Postman" />
                             </div>
-
-
                             <div>
                                 <img src="images/netBeans-icon.png" alt="Apache NetBeans"
                                     class="about__skills-img NetBeans" title="NetBeans" />
@@ -326,17 +310,14 @@
                                 <img src="https://user-images.githubusercontent.com/25181517/192108890-200809d1-439c-4e23-90d3-b090cf9a4eea.png"
                                     alt="Intellij" class="about__skills-img" title="Intellij" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Anaconda-Light.svg"
                                     alt="Anaconda" class="about__skills-img" title="Anaconda" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/AndroidStudio-Light.svg"
                                     alt="AndroidStudio" class="about__skills-img" title="AndroidStudio" />
                             </div>
-
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/VisualStudio-Light.svg"
                                     alt="VisualStudio" class="about__skills-img" title="VisualStudio" />
@@ -386,6 +367,10 @@
         </div>
         </div>
     </footer>
+    <a href="#" class="scrollup " id="scroll-up">
+        <i class="ri-arrow-up-line"></i>
+    </a>
+    <script src="js/javaScript.js"></script>
 
 </body>
 
