"Updated CSS styles and HTML structure for home page, footer, and scroll-up button"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header class="flexrow header">
+    <header class="flexrow header ">
 
         <nav class="flexrow header__nav">
 
@@ -41,7 +41,7 @@
 
     </header>
 
-    <main class="flexcolum  main">
+    <main class="flexcolum  main" id="inicio">
 
         <section class="home">
             <div>
@@ -779,7 +779,7 @@
         </div>
         </div>
     </footer>
-    <a href="#" class="scrollup " id="scroll-up">
+    <a href="#inicio" class="scrollup " id="scroll-up">
         <i class="ri-arrow-up-line"></i>
     </a>
     <script src="js/javaScript.js"></script>
