se agrego imagenes de las "academias" y otro slide antes del footer

--- a/index.html
+++ b/index.html
@@ -739,6 +739,48 @@
 
                 </section>
 
+                <h2 class="technology__title">academias</h2>
+
+                <section>
+
+                    <section class="about__skills flexrow ">
+
+                        <div class="about__skills-content flexrow">
+                            <div>
+                                <img src="images/unlam__logo_1.png" alt="UNLAM" class="about__skills-img"
+                                    title="UNLAM" />
+                            </div>
+                            <div>
+                                <img src="images/coco_a_codo.png" alt="codo a codo" class="about__skills-img"
+                                    title="Codo a Codo" />
+                            </div>
+                            <div>
+                                <img src="images/educacion-IT-logo.jpg" alt="educacion it" class="about__skills-img"
+                                    title="Educacion IT" />
+                            </div>
+                            <div>
+                                <img src="images/fundacion_telefonica_logo.png" alt="Fundación telefónica"
+                                    class="about__skills-img" title="Fundación telefónica" />
+                            </div>
+                            <div>
+                                <img src="images/ONE-oracle-next-education.png" alt="ONE oracle"
+                                    class="about__skills-img" title="ONE Oracle" />
+                            </div>
+                            <div>
+                                <img src="images/quarkacademy_logo.jpg" alt="Quarkacademy" class="about__skills-img"
+                                    title="Quarkacademy" />
+                            </div>
+                            <div>
+                                <img src="images/udemy-logo.jpg" alt="Udemy" class="about__skills-img" title="Udemy" />
+                            </div>
+                            <div>
+                                <img src="images/Egg-Imagotipo-PNG.png" alt="Egg Cooperation" class="about__skills-img"
+                                    title="Egg Cooperation" />
+                            </div>
+                        </div>
+                    </section>
+                </section>
+
             </div>
         </section>
 
