"Updated CSS styles, added transitions and animations, modified HTML structure, and updated JavaScript code for cloning and appending elements."

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header class="flexrow header ">
+    <header class="flexrow header " id="header">
 
         <nav class="flexrow header__nav">
 
@@ -20,16 +20,16 @@
             </div>
 
             <ul class="flexrow header__nav--items">
-                <li>
-                    <a href="#">inicio</a>
-                </li>
+
                 <li>
                     <a href="#about">acerca de mi</a>
                 </li>
                 <li>
-                    <a href="#porfolio">porfolio</a>
+                    <a href="#portfolio">portfolio</a>
                 </li>
-
+                <li>
+                    <a href="#technology">tecnologia/academias</a>
+                </li>
             </ul>
 
         </nav>
@@ -109,10 +109,10 @@
 
         </section>
 
-        <section class="porfolio" id="porfolio">
+        <section class="porfolio" id="portfolio">
             <div>
 
-                <h2 class="porfolio__title">porfolio</h2>
+                <h2 class="porfolio__title">portfolio</h2>
                 <section class="flexrow porfolio__cards">
                     <section class="flexcolum porfolio__cards--card pcccard">
 
@@ -611,7 +611,7 @@
         </section>
         </div>
 
-        <section class="technology">
+        <section class="technology" id="technology">
             <div>
                 <h2 class="technology__title">mis habilidades tecnológicas</h2>
                 <!-- <h3 class="technology__h3">mis habilidades tecnológicas</h3> -->
@@ -821,7 +821,7 @@
         </div>
         </div>
     </footer>
-    <a href="#inicio" class="scrollup " id="scroll-up">
+    <a href="#header" class="scrollup " id="scroll-up">
         <i class="ri-arrow-up-line"></i>
     </a>
     <script src="js/javaScript.js"></script>
