"Refactored CSS styles, updated HTML structure, and added JavaScript functionality for copying email address."

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#portfolio">portfolio</a>
                 </li>
                 <li>
-                    <a href="#technology">tecnologia/academias</a>
+                    <a href="#technology">tecnologias/academias</a>
                 </li>
             </ul>
 
@@ -50,34 +50,19 @@
                 <h1 class="home__name">Javier Espindola</h1>
 
                 <div class="flexcolum home__aboutContainer">
-                    <p class="flexrow home__email"><span>espindolajavier2013@gmail</span><i
-                            class="ri-file-copy-line"></i>
+                    <p class="flexrow home__email"><span>espindolajavier2013@gmail</span>
+                        <i class="ri-file-copy-line"></i>
+                        <i class="ri-checkbox-fill copyButtonOk"></i>
                     </p>
-                    <a href="" class="flexrow home__github"><span>gitHub</span>
+                    <a href="https://github.com/Micolash89" class="flexrow home__github"><span>gitHub</span>
                         <i class="ri-github-fill"></i>
                     </a>
-                    <a href="" class="flexrow home__linkedin">
+                    <a href="https://www.linkedin.com/in/javier-espindola/" class="flexrow home__linkedin">
                         <span>linkedin</span>
                         <i class="ri-linkedin-box-fill"></i>
                     </a>
-                    <!-- <button class="home__download .btn-101"></button> -->
-                    <button class=" btn-101 home__download">
-                        descargar CV
-                        <svg>
-                            <defs>
-                                <filter id="glow">
-                                    <fegaussianblur result="coloredBlur" stddeviation="5"></fegaussianblur>
-                                    <femerge>
-                                        <femergenode in="coloredBlur"></femergenode>
-                                        <femergenode in="coloredBlur"></femergenode>
-                                        <femergenode in="coloredBlur"></femergenode>
-                                        <femergenode in="SourceGraphic"></femergenode>
-                                    </femerge>
-                                </filter>
-                            </defs>
-                            <rect />
-                        </svg>
-                    </button>
+                    <button class="home__downloadButton ">Curriculum Vitae</button>
+
                 </div>
             </div>
         </section>
