se agrgo el iframe para ver un archivo pdf

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 
         <nav class="flexrow header__nav">
 
-            <div class="header__title">
+            <a href="#header" class="header__title">
                 <span>Espindola Javier</span>
-            </div>
+            </a>
 
             <ul class="flexrow header__nav--items">
-
                 <li>
                     <a href="#about">acerca de mi</a>
                 </li>
@@ -33,7 +32,6 @@
             </ul>
 
         </nav>
-
         <div class="header__menu">
             <i class="ri-menu-line"></i>
             <i class="ri-close-line"></i>
@@ -62,10 +60,12 @@
                         <i class="ri-linkedin-box-fill"></i>
                     </a>
                     <button class="home__downloadButton ">Curriculum Vitae</button>
-
                 </div>
             </div>
         </section>
+        <div class="pfd-view">
+            <iframe src="./files/Curriculum Vitae - Expindola Javier - 2.docx.pdf"></iframe>
+        </div>
 
         <section class="about" id="about">
             <div>
