"Updated CSS styles and added meta tags for SEO optimization in index.html"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.css">
-    <title>Porfolio</title>
+
+    <title>Espindola Javier Portafolio</title>
+    <meta name="description"
+        content="Portafolio personal, donde presento una selección de mis proyectos más destacados como desarrollador Full Stack. Este sitio está diseñado para mostrar mis habilidades en desarrollo web, abarcando desde la creación de interfaces intuitivas hasta la implementación de robustas arquitecturas backend. Explora mis trabajos y descubre cómo combino tecnología, diseño y funcionalidad para crear soluciones digitales efectivas.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://espindola-javier.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Espindola Javier Portafolio">
+    <meta property="og:description"
+        content="Portafolio personal, donde presento una selección de mis proyectos más destacados como desarrollador Full Stack. Este sitio está diseñado para mostrar mis habilidades en desarrollo web, abarcando desde la creación de interfaces intuitivas hasta la implementación de robustas arquitecturas backend. Explora mis trabajos y descubre cómo combino tecnología, diseño y funcionalidad para crear soluciones digitales efectivas.">
+    <meta property="og:image"
+        content="https://opengraph.b-cdn.net/production/images/5e3743d0-86e2-4079-85b5-585ad7174f55.png?token=uXaAhm4P9AFsKkGuRwJo8iOkP6PckFl_DsuoYApfuqQ&height=541&width=1022&expires=33259598729">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="espindola-javier.vercel.app">
+    <meta property="twitter:url" content="https://espindola-javier.vercel.app/">
+    <meta name="twitter:title" content="Espindola Javier Portafolio">
+    <meta name="twitter:description"
+        content="Portafolio personal, donde presento una selección de mis proyectos más destacados como desarrollador Full Stack. Este sitio está diseñado para mostrar mis habilidades en desarrollo web, abarcando desde la creación de interfaces intuitivas hasta la implementación de robustas arquitecturas backend. Explora mis trabajos y descubre cómo combino tecnología, diseño y funcionalidad para crear soluciones digitales efectivas.">
+    <meta name="twitter:image"
+        content="https://opengraph.b-cdn.net/production/images/5e3743d0-86e2-4079-85b5-585ad7174f55.png?token=uXaAhm4P9AFsKkGuRwJo8iOkP6PckFl_DsuoYApfuqQ&height=541&width=1022&expires=33259598729">
+
+
 </head>
 
 <body>
