"Updated CSS styles, removed a PDF file, modified HTML and JavaScript code for resume modal functionality"

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             </div>
         </section>
         <div class="pfd-view">
-            <iframe src="./files/Curriculum Vitae - Expindola Javier - 2.docx.pdf"></iframe>
+            <i class="ri-close-line close-button"></i>
+            <iframe src="./files/Curriculum Vitae-Expindola-Javier.pdf"></iframe>
         </div>
 
         <section class="about" id="about">
