--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <span>Espindola Javier</span>
             </a>
 
-            <ul class="flexrow header__nav--items">
+            <ul class="flexrow header__nav--items ">
                 <li>
                     <a href="#about">acerca de mi</a>
                 </li>
@@ -57,8 +57,8 @@
 
         </nav>
         <div class="header__menu">
-            <i class="ri-menu-line"></i>
-            <i class="ri-close-line"></i>
+            <i class="ri-menu-line open-menu"></i>
+            <i class="ri-close-line close-menu"></i>
         </div>
 
     </header>
