"Updated CSS styles for .home__about and added media query for mobile layout; changed anchor links in HTML to point to #inicio instead of #header"

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <nav class="flexrow header__nav">
 
-            <a href="#header" class="header__title">
+            <a href="#inicio" class="header__title">
                 <span>Espindola Javier</span>
             </a>
 
@@ -799,7 +799,7 @@
     <footer class="footer">
         <div class="flexcolum footer__container  ">
             <div class="flexcolum footer__content ">
-                <a href="index.html" class="footer__logo">
+                <a href="#inicio" class="footer__logo">
                     <h2>
                         Javier Espindola
                     </h2>
@@ -817,7 +817,7 @@
         </div>
         </div>
     </footer>
-    <a href="#header" class="scrollup " id="scroll-up">
+    <a href="#inicio" class="scrollup " id="scroll-up">
         <i class="ri-arrow-up-line"></i>
     </a>
     <script src="js/javaScript.js"></script>
