se agrego un icono para la pagina

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.1/remixicon.css">
+    <link rel="shortcut icon" href="images/briefcase-4-fill.svg" type="image/x-icon">
 
     <title>Espindola Javier Portafolio</title>
     <meta name="description"
