"Se actualizaron los estilos CSS, se agregó una nueva tarjeta de portafolio con las tecnologías utilizadas y se modificó la estructura y el contenido HTML en varias secciones".

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 <body>
 
     <header class="flexrow header " id="header">
-
         <nav class="flexrow header__nav">
-
             <a href="#inicio" class="header__title">
                 <span>Espindola Javier</span>
             </a>
@@ -55,20 +53,16 @@
                     <a href="#technology">tecnologias/academias</a>
                 </li>
             </ul>
-
         </nav>
         <div class="header__menu">
             <i class="ri-menu-line open-menu"></i>
             <i class="ri-close-line close-menu"></i>
         </div>
-
     </header>
 
     <main class="flexcolum  main" id="inicio">
-
         <section class="home">
             <div>
-
                 <p class="home__about">full stack developer</p>
                 <h1 class="home__name">Javier Espindola</h1>
 
@@ -84,7 +78,12 @@
                         <span>linkedin</span>
                         <i class="ri-linkedin-box-fill"></i>
                     </a>
-                    <button class="home__downloadButton ">Curriculum Vitae</button>
+                    <button class="home__downloadButton ">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M3 19H21V21H3V19ZM13 13.1716L19.0711 7.1005L20.4853 8.51472L12 17L3.51472 8.51472L4.92893 7.1005L11 13.1716V2H13V13.1716Z"></path></svg>
+                        <span>
+                            Curriculum Vitae
+                        </span>
+                    </button>
                 </div>
             </div>
         </section>
@@ -101,15 +100,7 @@
                     <h2 class=" about__profile--title">acerca de mi</h3>
 
                         <div class="flexrow about__profile--description">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quidem quasi quaerat
-                                nobis,
-                                quis
-                                unde
-                                aliquam ullam magnam quam. Quibusdam modi, nihil ratione distinctio libero dolor
-                                architecto
-                                cum
-                                quo
-                                corporis?</p>
+                            <p>Soy programador Full Stack con habilidades sólidas en JavaScript, HTML5, CSS3, y con experiencia tanto en back-end con Java/Spring y Node.js/Express, como en front-end con React. He trabajado con bases de datos como MySQL y MongoDB y en mis prácticas tuve la oportunidad de aprender muchos aspectos diferentes en relación al frontend y el backend. Mi formación en Ingeniería en Informática me brinda una sólida base en lógica de programación y me permite adaptarme rápidamente a nuevas tecnologías.</p>
                             <div class="about__profile--img">
                                 <img src="images/Captura1122121.jpg" alt="img profile">
                             </div>
@@ -127,8 +118,118 @@
                 <section class="flexrow porfolio__cards">
                     <section class="flexcolum porfolio__cards--card pcccard">
 
+                        <a href="https://github.com/gabito1966/mvp_poloit" target="_blank" class="pcccard__img">
+                            <img src="https://i.imgur.com/itb1frg.jpeg"
+                                alt="imagen work">
+                            <i class="ri-share-box-line work__icon"></i>
+                        </a>
+                        <div class="flexcolum pcccard__detail">
+                            <h4>Gestión de Inscripciones</h4>
+                            <p> sistema de gestión de inscripciones para práctica del acelerador del POLO IT</p>
+                        </div>
+                        <div class="flexrow work__imgContainerCarrousel">
+                            <div class="flexrow work__imgContainer work__imgCarrousel ">
+                                <div>
+                                    <img src="https://github.com/tandpfun/skill-icons/raw/main/icons/NextJS-Dark.svg"
+                                        alt="NextJS" class="work__imgContainer--icon">
+                                    <span class="work__subtitle">
+                                        NextJS
+                                    </span>
+                                </div>
+                                <div>
+                                    <img src="https://user-images.githubusercontent.com/25181517/183890598-19a0ac2d-e88a-4005-a8df-1ee36782fde1.png"
+                                        alt="TypeScript" class="work__imgContainer--icon">
+                                    <span class="work__subtitle">
+                                        TypeScript
+                                    </span>
+                                </div>
+                                <div>
+                                    <img src="https://github.com/tandpfun/skill-icons/raw/main/icons/TailwindCSS-Dark.svg"
+                                        alt="TailwindCSS" class="work__imgContainer--icon">
+                                    <span class="work__subtitle">
+                                        TailwindCSS
+                                    </span>
+                                </div>
+                                <div>
+                                    <img src="https://github.com/tandpfun/skill-icons/raw/main/icons/PostgreSQL-Dark.svg"
+                                        alt="based de datos postgresql" class="work__imgContainer--icon">
+                                    <span class="work__subtitle">
+                                        postgresql
+                                    </span>
+                                </div>
+                                <div>
+                                    <img src="https://github.com/tandpfun/skill-icons/raw/main/icons/Pnpm-Dark.svg"
+                                        alt="comandos pnpm" class="work__imgContainer--icon">
+                                    <span class="work__subtitle">
+                                        pnpm
+                                    </span>
+                                </div>
+
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520"
+                                        class="work__imgContainer--icon">
+                                        <path fill="#e34f26" d="M41 460L0 0h451l-41 460-185 52" />
+                                        <path fill="#ef652a" d="M226 472l149-41 35-394H226" />
+                                        <path fill="#ecedee"
+                                            d="M226 208h-75l-5-58h80V94H84l15 171h127zm0 147l-64-17-4-45h-56l7 89 117 32z" />
+                                        <path fill="#fff"
+                                            d="M226 265h69l-7 73-62 17v59l115-32 16-174H226zm0-171v56h136l5-56z" />
+                                    </svg>
+                                    <span class="work__subtitle">
+                                        HTML5
+                                    </span>
+                                </div>
+
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520"
+                                        class="work__imgContainer--icon">
+                                        <path fill="#0c73b8" d="M41 460L0 0h451l-41 460-185 52" />
+                                        <path fill="#30a9dc" d="M226 472l149-41 35-394H226" />
+                                        <path fill="#ecedee"
+                                            d="M226 208H94l5 57h127zm0-114H84l5 56h137zm0 261l-124-33 7 60 117 32z" />
+                                        <path fill="#fff"
+                                            d="M226 265h69l-7 73-62 17v59l115-32 26-288H226v56h80l-6 58h-74z" />
+                                    </svg>
+                                    <span class="work__subtitle">
+                                        CSS3
+                                    </span>
+                                </div>
+                                <div>
+                                    <svg viewBox="0 0 256 254" xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" class="work__imgContainer--icon"
+                                        preserveAspectRatio="xMidYMid">
+                                        <defs>
+                                            <linearGradient id="c" x1="50%" x2="50%" y1="0%" y2="100%">
+                                                <stop offset="0%" stop-color="#FFF" />
+                                                <stop offset="100%" stop-color="#FFF" stop-opacity="0" />
+                                            </linearGradient>
+                                            <path id="a"
+                                                d="M180.828 252.605a15.872 15.872 0 0 0 12.65-.486l52.501-25.262a15.94 15.94 0 0 0 9.025-14.364V41.197a15.939 15.939 0 0 0-9.025-14.363l-52.5-25.263a15.877 15.877 0 0 0-18.115 3.084L74.857 96.35l-43.78-33.232a10.614 10.614 0 0 0-13.56.603L3.476 76.494c-4.63 4.211-4.635 11.495-.012 15.713l37.967 34.638-37.967 34.637c-4.623 4.219-4.618 11.502.012 15.714l14.041 12.772a10.614 10.614 0 0 0 13.56.604l43.78-33.233 100.507 91.695a15.853 15.853 0 0 0 5.464 3.571Zm10.464-183.649-76.262 57.889 76.262 57.888V68.956Z" />
+                                        </defs>
+                                        <mask id="b" fill="#fff">
+                                            <use xlink:href="#a" />
+                                        </mask>
+                                        <path fill="#0065A9"
+                                            d="M246.135 26.873 193.593 1.575a15.885 15.885 0 0 0-18.123 3.08L3.466 161.482c-4.626 4.219-4.62 11.502.012 15.714l14.05 12.772a10.625 10.625 0 0 0 13.569.604L238.229 33.436c6.949-5.271 16.93-.315 16.93 8.407v-.61a15.938 15.938 0 0 0-9.024-14.36Z" />
+                                        <path fill="#007ACC"
+                                            d="m246.135 226.816-52.542 25.298a15.887 15.887 0 0 1-18.123-3.08L3.466 92.207c-4.626-4.218-4.62-11.502.012-15.713l14.05-12.773a10.625 10.625 0 0 1 13.569-.603l207.132 157.135c6.949 5.271 16.93.315 16.93-8.408v.611a15.939 15.939 0 0 1-9.024 14.36Z" />
+                                        <path fill="#1F9CF0"
+                                            d="M193.428 252.134a15.892 15.892 0 0 1-18.125-3.083c5.881 5.88 15.938 1.715 15.938-6.603V11.273c0-8.318-10.057-12.483-15.938-6.602a15.892 15.892 0 0 1 18.125-3.084l52.533 25.263a15.937 15.937 0 0 1 9.03 14.363V212.51c0 6.125-3.51 11.709-9.03 14.363l-52.533 25.262Z" />
+                                        <path fill="url(#c)" fill-opacity=".25"
+                                            d="M180.828 252.605a15.874 15.874 0 0 0 12.65-.486l52.5-25.263a15.938 15.938 0 0 0 9.026-14.363V41.197a15.939 15.939 0 0 0-9.025-14.363L193.477 1.57a15.877 15.877 0 0 0-18.114 3.084L74.857 96.35l-43.78-33.232a10.614 10.614 0 0 0-13.56.603L3.476 76.494c-4.63 4.211-4.635 11.495-.012 15.713l37.967 34.638-37.967 34.637c-4.623 4.219-4.618 11.502.012 15.714l14.041 12.772a10.614 10.614 0 0 0 13.56.604l43.78-33.233 100.506 91.695a15.857 15.857 0 0 0 5.465 3.571Zm10.464-183.65-76.262 57.89 76.262 57.888V68.956Z" />
+                                    </svg>
+
+                                    <span class="work__subtitle">
+                                        VisualStudio <br>Code
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="flexcolum porfolio__cards--card pcccard">
+
                         <a href="https://github.com/Micolash89/crud-page" target="_blank" class="pcccard__img">
-                            <img src="https://camo.githubusercontent.com/e9f1946b3cb924a12a0b2f90b64726fb4407f610c4c825d846f973a13fa9dcbd/68747470733a2f2f692e696d6775722e636f6d2f5537474b446e492e6a706567"
+                            <img src="images/U7GKDnI.jpeg"
                                 alt="imagen work">
                             <i class="ri-share-box-line work__icon"></i>
                         </a>
@@ -639,6 +740,10 @@
                                     alt="JavaScript" class="about__skills-img" title="JavaScript" />
                             </div>
                             <div>
+                                <img src="https://user-images.githubusercontent.com/25181517/183890598-19a0ac2d-e88a-4005-a8df-1ee36782fde1.png"
+                                    alt="TypeScript" class="about__skills-img" title="JavaScript" />
+                            </div>
+                            <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Python-Light.svg"
                                     alt="Python" class="about__skills-img" title="Python" />
                             </div>
@@ -655,6 +760,10 @@
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/Kotlin-Dark.svg"
                                     alt="Kotlin" class="about__skills-img" title="Kotlin" />
+                            </div>
+                            <div>
+                                <img src="https://github.com/tandpfun/skill-icons/raw/main/icons/TailwindCSS-Dark.svg"
+                                    alt="TailwindCSS" class="about__skills-img">
                             </div>
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/HTML.svg"
@@ -697,8 +806,16 @@
                                     alt="Vite" class="about__skills-img" title="Vite" />
                             </div>
                             <div>
+                                <img src="https://github.com/tandpfun/skill-icons/raw/main/icons/NextJS-Dark.svg"
+                                    alt="NextJS" class="about__skills-img" title="React" />
+                            </div>
+                            <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/React-Light.svg"
                                     alt="React" class="about__skills-img" title="React" />
+                            </div>
+                            <div>
+                                <img src="https://github.com/tandpfun/skill-icons/raw/main/icons/PostgreSQL-Dark.svg"
+                                alt="based de datos postgresql" class="work__imgContainer--icon">
                             </div>
                             <div>
                                 <img src="https://raw.githubusercontent.com/tandpfun/skill-icons/de91fca307a83d75fc5b1f6ce24540454acead41/icons/MySQL-Light.svg"
